--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
-baseURL: https://example.org/
-languageCode: en-us
-title: My New Hugo Site
+baseURL: https://jeongseonghun.com/
+languageCode: kr
+title: Seonghun Blog
 theme: [ "PaperMod" ]
 paginate: 5
 
