chore: 가치 없는 포스트 예외처리

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -150,6 +150,6 @@ disablePathToLower: true
 
 module:
   mounts:
-    - excludeFiles: posts/templates/*
+    - excludeFiles: [posts/templates/*, posts/draft/*]
       source: content
       target: content
