docs: mvcc 오늘자 수정

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -40,7 +40,7 @@ params:
   hidemeta: false
   hideSummary: false
   showtoc: true
-  tocopen: false
+  tocopen: true
   ShowPageNums: true
   ShowAllPagesInArchive: true
 
