--- a/hugo.yaml
+++ b/hugo.yaml
@@ -75,9 +75,15 @@ params:
 
   # home-info mode
   homeInfoParams:
-    Title: "🍀 Steady Growth"
+    Title: "Up!"
     Content: >
-      👋 반갑습니다! 오늘 즐거운 하루 보내세요!
+      - **How to become expert at thing:**
+        1. iteratively take on concrete projects and accomplish them depth wise, learning “on demand” (ie don’t learn bottom up breadth wise)
+        2. teach/summarize everything you learn in your own words
+        3. only compare yourself to younger you, never to others
+      
+      — Andrej Karpathy (@karpathy) November 7, 2020
+  
 
   socialIcons:
 
